# Bash-like-CLI

./: .gitignore  1.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  names.txt  rshell  rshell.cbp  test
header/: CAndConnector.h  CCommand.h  CConnector.h  COrConnector.h  CParser.h  CPipeConnector.h  CRdirConnector.h  CRunMode.h  CSeparatorConnector.h  CTestCmd.h
integration_tests/: commentedcommands.txt  exitcommands.txt  outcommands.txt  precedence_tests.sh  precedencecommands.txt  single_command_tests.sh  singlecommands.txt  test_symbolic_tests.sh  testliteralcommands.txt  testsymboliccommands.txt
prototype/: execvp_sample.cpp  infixToPostfix.cpp  small_parser_sample.cpp
rshell/: CMakeLists.txt
rshell/prototype/: parser_sample  small_parser_sample.cpp  waitpid_sample.cpp
rshell/src/: CRdirConnector.h  main.cpp
src/: CBase.h  CCommand.cpp  CCommand.h  CMakeLists.txt  CPipeConnector.h  CSeparatorConnector.h  main.cpp
unit_tests/: all_unit_tests.cpp  and_test.h  or_test.h  pipe_test.h  rdir_test.h  separator_test.h
